se artreglan los formularios para q e agusten a la pantalla completa, se editan los bones

--- a/PanaderoApp/Forms/AggUsuario.resx
+++ b/PanaderoApp/Forms/AggUsuario.resx
@@ -117,10 +117,153 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAABGdBTUEAALGPC/xhBQAAAbBQTFRF////
+        YDkS9LRs8540///9//7//P/////8//79Wi4AoJWHYjgSXC4AnpGF///6//77zF8nOgAA9/by9r+CTBgA
+        9axSXDIA6acA09TWVicA9/f3UiMA7uvnjHlkUBoARAAA5agAUykA7K0gUCQATR8AWSoA9KhK29jSa0ck
+        vL2/VSwAWjUAVB8ANwAASBMASx4A7aUA36YAelk3+/vt4OHjycC01tLJaUMYl4d5UBQAZ0gpSQsAzcjB
+        dFk/6ObdYjcVfWZR8+zL7dOS9ee/8OGw9PPd6M2Gu1UXmEAA7ujIvLKl/fzo6cVu7Necb0wp8all5rA1
+        571cfUUbx8jKtaeVVzsXY0MrhHNcnot3gGRRuLCeQwoAXiQAiHVnnpR9vbSulnlbkGxGkmIpvYE51Y0w
+        rm4LgFMqf0cK6pMw6aNPqmwok1UAtm8azIw+sH5CbVpObzMAm5SOd0s14YUwv34azXND4s2DkFEm3HQv
+        23w55rQv0nRN1205jjsA474168Ni5LxL9dqv6bFInW4/yZVYwJNluoRK+71q4LF5qX1RxXpCsVMimUse
+        7J1doVMmp2o5+oMK1wAAH0FJREFUeF7tnYt/2laWx68a6SIeviQKgxbzsMCmsJjBYAUZY1B4iSlYOJAl
+        sZ3W9Xa2k+nOzHZntjOZlm3X5NG0nbTdf3nPlYQBx0l4pdv6w7eNEWADP93zutLVAS1ZsmTJkiVLlixZ
+        smTJkiVLlixZsmTJkl8qvGBtXFUwf8pbm1eWZgxdcY1Nh7VxZVF81saVZfXGKbijdYeictbGlSHvEzhi
+        bQNs19q4OnSTh8hmbcNgxq6eXwY21ofDhtHpkbV5hTiKbmWR5Xws6h6aW1cILNi9nqx1h0WOTWvz6sCi
+        wu7OTnNwp7ummpu/ZHj1FFR0FWRbdYMmhBw78eQJoZssaoYcxmO/XLrFFTW25wmivKdECveoefKoG2Vc
+        91WjfIuFvIRboESWtY2/GsuOpd/FQd+meZJTCrsuj5rYTDZPXImTrG+XxlEeNT2Md6uJCAQcr+/BggeR
+        qEoh2zTIFmLC29EHAUWNCcqaa69w6A81FY9nRU258rGkc49On1ikbLqY0BGC1L8S9S5iRsUahhDIrpSY
+        jaTf54tSfD5fMnlQzDVjtMZg8cLEsmB+sV/7U01HaiuHsg4VCYUAigUdqOilMYaHtyJHIa/vkBCshuy5
+        +QfRZkNyNnhvw2f3Mgzj9JrQzYO41xv2xo+7EAsWpRAEKE31L7sfbCFVWYViW4HKJYYCKsIrmweJ4yyL
+        eDDPWD4aLWI3CtpDhbkkctSflWDoA6/TaY/6/Oub94ulw2CwVLzv9ft3dryM9+DAG93IPxAQz88/d+Ph
+        wzrW7LuKAtETZYskt1dS9kLNB++vxUhpZzvu9Ye7Ai3ceEcoWiRECDv9c9kph/lCMemNuz7YyOeahcCI
+        52Ehlu2WQsw2jCbjDIcdqzAJt56bGQ4FCurKLg0p3b+oeyFly57LuVJK8l5S3fQ6vQewR+MbKwH6u4Xw
+        ByWCCp7NY+NPZ0UtJu2bH9hzWXNHsSwdKLASnrdRhwEfOfRQi73N2MNWIp6L7ppvTRGEgJpN2bO+LXVt
+        UyjtZpU9TyFnj+az2e7xjs8VTdLdiQI7ySDC3WQSplQzwqLT0KY3WSqMTFheRj3acDrpQCZLAp7T61kh
+        5wlnUSBVbK7nYzeyaEVAioxisIPfDweNvSwUclG/P0FzI1tMdREfTESFGd+WR46Qc+NEhUjpth66HDVv
+        N0zVdS8wl8JVh3234EaxZtbHKDcgxEBCgCiNwe9YDCoGXkCyJc9eCUyVL61BsVP0rZiPT0835LoHDv8m
+        7+LhnRJUIuPNC7O7IoeEUmj3BKFwSlnL2ehBJx7MiGdZy/mhwADAReBWPdozKvBSeBUF1j2BmYwHxzz2
+        4mvtcwDLoeKmIdF18sb98Uq4QDerxlAukPQEPly1ZkivAiMhdyMHobcYROh098PZstW2vWib6A8xywob
+        hkImBGM+EzakrPnXsii7d7JSNF7SeuLVqMW8gIRwgUel0EyeGAsljag8CSw6MlyR8cIunQn4hNlgF3eV
+        3RKZ+G2zCRWpCcSqazPF8WZy8mMELB/zGwqdCeuRqcnuwIShufaglKVqJwEMWSgqKAvqcnHrsalYSU6z
+        YwKWmXpmrDDUtdD6LbWwl7swf3ktLGIdCnKwKHBjlqnwT6uQKIqg3nhwMjhEMRGcG6OCKsQQOpnluGI3
+        mbO2LLjV18QdSGEGduv+VGA2ltjLocDaNhrPvBCYcew0d/KvH310hFTH6WUeGiCriFeLyDZ1FFdD/vGh
+        xw38qhjOw9TGEDhbpLFhh7MY6Dochxd8UDg9+e2/ffzJtV/96lf/dpr93V//+DAHA3YBQ1meToinA1KN
+        C8K2Bce5bUiXOTehc5cLQLp1GEPoZDwvf4BJMD5kaS22OlRIHyLbfwVx1669Cwrf/X3sd9euXfvkdwen
+        7PCosAWHTmNTp0QWx3ajULybEEHA+5E60rSXXp1+mG7SGEHGFaQz71kIxGO0UBshcFJA//quoRAE/urd
+        aycPQSHw8d2XSm2OBE6nT/rwuf0uJmtaN+ZqZb5f0/SXJ4EQyUrWCDLMzLV3cA8K7tXBi7M2dPr7T/4u
+        /OXfQRodQarzD05T4bVrfwRLsfGjimyoYG1Ngxsqb68vEeyeFhQeuTP6vhbpIO0lK81uuKhAGEFm4lz9
+        Esd523DnsZg9+RMoCSr/AQoNge/CXbshj7IDVbkxOx8y00EjG2r6nUy3e6q6kRvrol7rVWsCuTiKK2Y5
+        w0RLc8y26RGLASwSDj6mQv6j++lAIb3720/oT8rH//lnh+m853CzKARLVZJWtSBUtZZWQ7UzzF08QumY
+        s2C7CMarB5aWh08tKzXufWzINvj9H/70F+vX54MNbFgKbXK/JreqkSdgppcrtK9cCPWzgt3FwWB9fBfk
+        vfsuNVHK+Rhe+/i31/7UtE2dIGh0GR96PhAyFbIcbqUz+plYqWqYcBBPMRmU/6ZCp2vmeehFcsOxumvd
+        vsRvzXgzPRfyJj8YQ47Y9nuirmtyex/LNGGwgkyFAkOFs7nCRZQ/WiqAP1i3L0ED0X9ZfzANuMG6Oc6m
+        uS2h5woR26jKMm6TjliDnGg8UpPN31qsQhv6r89MERSoZ17NX0+nz76k2sKYlauDwDRUiHC1XSlXdFGs
+        6pg1htqtm6+/4DEsvPc6VWM85F8uP94AK0t1wrUanJUSzv0QxON6WmxH+pWyKLPGKOJayziEsmCFR3/7
+        dyP7TcDvLE/kWePQ5iTw+2K6gtp1rMnG+PABz7bxBM3/ckTs9Fu4L1aondoQkXuE7sMFK/zo+mevVjj+
+        xMdmxuDxan6SqMODURNbX6w1RGm/5TYiJYzhoPqWwREbckOsilL9kczxMliIXqPPLELhP1m3YBl/v/63
+        kfzwyWdffP759QGff/7FZ5+NGDGd39HPmduboGjjWV7TCJI1XJcich9cTYa/Ho4hR6o9vVLttyVRi9Rw
+        QwZfreiLsVIONYd/+/cvv7z+xccg7bMRaUO+pD8+/xyEfvLZ50aCWmmi4/AE5RQoJNW+rle0WrumiTUw
+        VDqG9vzgeYJropTuiRW5JkZsdfpYrU1/LmIMjwYHLzA6/vLLv/23IWbIbwzMbUOiyXvGEYHgWiwwcb2o
+        SWmoPgmqiBKBGySo8QPrKZgiojNR6tcjpBORyuCCPGr1FjWGjth5qFC+gkE0+M1v3vvqz3eLwZzD0e12
+        HSu544Pff/XeQCk8n3djG8kVbihCtxm4UKy8AlzNpOtER08iaUEvI9QI7AysFAKLTGqVVbmt96VIWapA
+        uH2coU8sQqECRS2PoPqGCYZy8NV773311d3j3IOCevElhVjWEdz+M/2NPwcF+Et17Uh1r++mzDP7b4CF
+        ygXLIBOqsw7u9GVUC3iKkCfoZ4AipqHrrUqrkm53qo/TmQZYaYa+qsM43j2flfJrAuJvCQV6AhEmv7ER
+        u2PPP/owJ9gCt2K33LDXUVd9H/yo6VDpHnojWGhU+nW9U9Ghypbboo46KL6t0bRKcwcobYmSFPkfsYr6
+        EbGCUFmkjzvs8bkVopIDoVNBcLz+HNAFYL97jpWCul08neytWVqwtaWIdNbXMd3A7apwXCNuqARg93Es
+        wRUxkq7U0+V2RHwMbps2FTIgcU6F2T1MhBMUCII/TTAYBjBFD6TeF1AplZriwCenRSSp4u7p5Z7YQxGx
+        RepQaJMGxDrYAWC3nUcY65EzsQ+VmyzR4ob6YXxeK131wCA6mkjIw4edTKIbCamTZgnFFGXyc08sTJXl
+        Whl+9Pr9dmNfjIhavWLjSAteguW06qN6tVY/q/elGqG1a7sKf2REmvh8Cll0FAogshVD7lIxAPffJBIU
+        uYvq1hoki13PfffgDNwb4YisNTSt8bhez7TLuCHBID4WKwQ9geQI+xbkwxBH0v26VAbNuFKB/W3G0vh8
+        VorUvRJU3WugznFjBcLM61+LYwWhmWqWoKjJMiVl0hEECTZBq+pipNfunbXTNQ0U1qoiWGTnpvk8YWXw
+        z0gbt0RasckdmsvMbOGdSyGPgiGwz6AdJCobGx++IYVjtnTk8OcQWdkEz532jbEWESPtutxP632x565J
+        kczjlvikhsxD3rLe64P7lTMVzOFH8mAMnS7HXGOI1JBHRdh7O4CRUNoL5SD+m7ZqZhC6rgd2p40l8K9Q
+        ioU2lfUACuz51k6Mp6eAs9m0s/YZQXw9E9EJjFZE0hsQQ3XzPDoPdQTcsPv9jozlxlDhfFYK5XM0TpDq
+        YVSYt2TtyY0i1CkAj4RmsGseLoQPdQsVSoInmg3dQ6wSdMROY0btPQ02ujgAY63S7/RgviSXQWFdEyMR
+        qWEoINbBNha1wFUJQQ7jcOncCnlh3V5iUTaVoAfoV4880Wgy7yjAON0Pb2SV7RtIKRYC+WBsj8mGt4RD
+        GOOEK5kQphZI50mVTj8iUU0tHeZK/UhEk8H5YOY4Bof36y2o3VYWpBA1kz6IHI4kOKQbQ2rccjF2X8jn
+        97ruKXveUmEvWYgngkfRe+oNSC3NkkMNBgvTnG+0gLyO5PJZOhKJiA1UhZuOhkkPbivjClgbuGxNRrlz
+        P5wPFpXsIZgtrCRDOZ5qVHPJKH1pCCY5f6pQdHliu6GmY+0UBYiAfL5kHtxl4tn9BQiBqZKkY6LV+j1R
+        rMuPwRG1S14MLDZvrBdiotOcUL0UsrrpAqtDOX/UmrMLXcbvdCaaqJAroOJmlhS7vAARp5DaPYmVig7D
+        UWeDhaTfEFC5L4qRs0pETJ/pehnjiweD6Y53hA2BTCowcdp9BSxSQnZqCSvJ254VOtGA7ULYuaPibIAW
+        oVA5g6ai/SiQSoQG8/sZIby73NLbkN3B/2zy444k9isaoUW4UFCU2DmFY+vkr2vqoH0ZOdc6zYTNkDfh
+        zJqndY/s3pK6luoiJg7/UkXB6/LlVAfM7OcCrPPx43oPok1E6mCk1XS9lxafVGgdGmiW1tZSoaTf708m
+        Pxicd7r3hhw9GULSXABYWPcyG8YxChxLeTdjHueu6vF6CiWXqxSLe35Nz07PMYBDqm0R8oV8lhbFnlyu
+        PJHEjF7TYCAVx7HfbyypNXD5i0ZZNy88+nDdvEpEzSecvhJPI6XCeKDgSZ46dqOl1eLWrwNIoAl5MYA3
+        wsQ+EsmArUKVRuRGS+9lIp1WeZ8ISjeYtycAO3MIIXDGmDYGZPdQlG7AdOZoyxktwUCxmMCwZotdVAgW
+        YZRV0LeI96Lw8OLVswjNG2CsGryX8TCRy9VqrSHPGVcuhUeH7wvGEXXI/SFn9AhinvmMyaynmC+H54Ta
+        o1brEY2nEdGq2Ux4MBPsLo+9+YJorgUMhfBusYRzI7tYTRfgNEj+MFJapXNWRW4Ck2+e4zCthLFcruvy
+        23jzWzcC1q5kkZpgEu63qfAcG9SpxhsRWrESuVrpSL0qJm/hzXn2xnC1gy2265tlsdNUYJYF88QQcfY1
+        Tau2Wno/I8GM8TFhiTWtWSg8gjnD4HU58MXE4uLm5RDeyIZtmNpLkgj/Ae06lDfW84uGR6NrzTAK7s6y
+        jGQabKh8JqZh1AyBkb5eqcrUUhcVr19CGF+DK3gWdvL8UohN7qQlUFUGE903zm7/1DjuT3+idwps1Uyn
+        KiNsRJhJViYvHuF9mKW9Ldyo1StTf7cRyBIcZ5T3PzEwaZz1aoo3g3Gtbpt+1eZiYVGTTgjfDny5+lZd
+        YCJY9tbbi2qsdmF1zZWDs011ImjJkiVLlixZsmTJkiVLllxtZlgK8PaYeFXfNGAcG7mu7P8ZTnkbrZvU
+        eRdZLJTcQs41j3N/1k4QbwNWLS7cUGNrM10j9pYgyL+oHc4K5gIPdLo7w0XEbw0WFUdP3cwDhw7Ng4mn
+        /sOfl8LhNfTzwaIjM8IoyQ31J08YPLo1COAs7TE0AjO41mxeWJR931z9yLgWZRdTEDtfEMTj2OjiC8Gz
+        qDHEqGD0KUToQTI0x/qxWWCx4B2JmKQYwOfX/BZCC7uiGnV9xt4iqOj7iTOiGx2NdZdtMuRc4dHGA2tr
+        Xmzo2Os3trDiudD0jQae4T5efCHFCntjjqGuPRgEOwJRYVFxT/A4t6xN77jps/SMFBuIKYWCEgvQMLDo
+        SFRIlqwtAyEVNBW6UfOD7YW924rLOWg2czEFCdmjfJi2wfT5k/5w/ii76MI1Gx1zfXr1laGQJXH/6aLW
+        EAU2nOcdCY+HnX/gjZQTj89ofmnhtftCJ7HxkD4nsSTE76ExxkIl615zfXG5ouRynndCzA9dTW7mN7zm
+        ouBRvBtmz7/FwKL73uRIP6VmyFqQIfg8CyuSsxsMs2mcPyQ4QJUanQXVlbCx8npUIu376XU6XYy5Hm0x
+        KLvMRuE8huXMRTUYlZJHi/JCwngZay9yOOs2TaRQ8hiL1sdxFj8sBP0wjMVFBpzmrhdkWRJLRt9uFnWT
+        edv8LUQpPHJEh/2CsLGAe7UZ9484H+A0W14yXldcLawz8Z0Ru5oXDmXDro3BdaFFMx8HQuePzAsb2GC8
+        9werFOjydTUXDo/roxHGbJZINaIgs72z2EV2wmGScZsjVjKdzxHqLmzpRNPF+APUNM09lj0OuZy3rSEb
+        4DzpHlvtoZhwIbvDRBerEAwJ8r4RCo7MKFa8R1cRLoYg4zK6ndPXE5qM30WbIztvW3osvPlCYMcMOr5C
+        dye+u/CZsoNerAdYF8b4z6vx+Sl67WYnUqFZ3Nv1rOdLQH495DMs1TJXp3M3G1g3FG6q9p3t3IJ85ByW
+        LZpZgjOvmkuN94+bi6LduHrC7dhbKzaV80ynZnO+qDMezEcti02gImw4vY6Si/G+hcM56rq1YbCYCx5M
+        goZBBPJ7xnU3VrViNINdPUo6vQWH1ekyRYr0htn23mb8b+NwDr1i9pzcAidxjl0FakAGXn/M8DBdOFsI
+        3faokE0ot1VDqvPgAH6M7mEzgcJe4W3aYHsWTkd3m7I4K2EVenzNUbw8gztcrmNkNA52dWEI49vb2/GD
+        7e0d62kKHvRWZnG1PMfKKltsRCE7U9e5y2FJCnbXqxxLTTrjyPDDeNELAqlIesd6msIZl7fDJ8Tl3jy1
+        HD3gB84B/2MINhishFtMZcihHNQnnleYfWDDGwyYjghQA6USvaOzcszWaUs8gmvS2HUaPxs4FIMwTRs5
+        vOxDPGpGwyoNMBQnE6cKmbjTPlyPzRIbPqtC9YEfpaXaXDmEtrZ3BEvHReD48MjRLKiG0fPzDybMeZUb
+        tNC8cOqJR4qf+XDQrdR5EGe2aVcMhl4GOYBoMnfWhp0jS/Qy1FmAN2WVbvBeKrXl8fi9Ozs7m+GE12X3
+        On2J4+AD6p1GB6c5iIGJdm+cNJVb48NIVkKgjAr0Rv2HwYODbVOiMzwMA5zcQk+kFkKamG7PVkgK2aAv
+        ubX+8OnzZ8/eMXn2NGw/2M5//d3D+HpqM/f6VvhvhiW0J3p2raBeeCH3LqhxMrQnZqEQBKXghzTOOM/T
+        IRE40gOFEYLZVn3/8nj8angW8UqQVk8P71jazvkuziSe33zn5refPtzYWr+kHe00sDbEY/Rr2uNmDHeS
+        cbr83qMCUg93qHkacRTYsuIST6qcnC4/EiUNq3QFvPnwpLCIZPOeMJ2ZRZ99YykbcPOZ/fbtmzdh65t3
+        nj+0h4qFOaMYDwrPr/yB16LVIdkL5R2QRtRiMgEWasVSIGwMNocJqpCG1Ce9jNyQCUcI/dYU4xUmgIWc
+        l99yfffsaQISbtjUNeQmSEx8a915J8G4PMXYxSGYkhsjdUr3fepphHbzQbHSFnVFkGiopJgds7BAkF6u
+        iWKZF7QWksuaTDCRJ16MLhymos+Nz/9dwul8amyNABLvf21tv/MUfiG8d0Re2b95EkYVbiYh4xnXO8YO
+        PdbBqINtawTNdAiZWdNwRy9LUgvv60QX02Ik0q5rkypU7FtDVQ8TLw0iSPxu+AuJBPySJ67SyDsrowqV
+        nLraxCz4X8iaPgEDG6XdSw2Fjep+JrPfF6ukL8uZiCRmWvLEl4E1U74R3/vm6fqn1uaQmzeHCnfs8ON5
+        ch1qaOsFpmeocJUGLiXlJkGPCwpSe97IghBo4B8dz60CVNmyZqvVNSndctf222WMtbpekbGNTOSHUEq8
+        v2N+9AEPDy7GGmAYYZ8+pD+fRT1zSBwqPFlTeALh1e1hEhv57oPScBxBon3rCJ7j9qtYb8tSuo5t7cdy
+        RW9pMg9OaL3EmyikbhsffASndXs5n5oe+4/oujr18ZuB7w4VnsJMKqAgTG4cdAPqic/0Q5OoJ6jAEMio
+        3JJFUdPTLdKrk0wabDQdqTdGLP11CAlqdOMMsv3lmALfufMiUZz2clYyaGltKTTX6bAFKOVWQWjQ+Hog
+        C29yk06TeU5u4Loui+mWXNvv6QjXIcx0apO6II9yG5fruWkkwNdx/futaY/gYNrgimIq5HEgdj5DUI92
+        YD5oyWNcoRLkENZNCF+tyr32vpSuIC2jE61M9jUZ9s1koZzFgsfwqguAPAPr7uV8ed17e8oxxINONJZC
+        dEQvc8zSo4XuNS8oNCV6o+srxsEh1qbJNr1aFTP7erpRls7kniRlzlrVsrY6WX0MYeayITSlvUnil9e/
+        n/bbX7BubQzGELtZgrfW4B6BiSGd1YO+UPHU+KZFJHCoIq9KlaooNtzllqhjOQKzCqldr2oTO0jQZ33e
+        EQbC3iDx+vUX4WnPUj+Rza/dhaqN3tBvPsS8UoDpIonGGScodCZp4cuzBGqAKk/apJI+09JSmejpR0Qj
+        cuWsrtF5+cTWk995OTMYur599uz5119/TecYl+QO4M7169cTU3ZWwU+sC/OKLx3GfkBzfHxnu2nGINYt
+        s3Id19JyJ9K26brWFlvVjBjRaU+pKSZwPGIefnNBwLNnX3/00MnkGZg15fP3wuF1hs6mrGeHfAEKvdMq
+        1OtmN2jlRjE45OgoWGK2D6KhIB0+G2vjEK81cLVOIpLWEWHO+ziTLuOWKEZEMdNplY0Xmwge5b07dDJo
+        8OnThzvRcCK+nU+EYY/e3vnoo4+ePn368OHDHWY95Xx6XppSfqCtTKcdQ1srYvoPqxQ9IY9FdGfH7tmJ
+        Hwx6F0ERKuOKRiDliVK1BWmiLz0plzVU7bT16r5tmhyFUc7LOGmjFAN6wDlhv3/w0dPn3377zjfUDy1H
+        hHG+8+w5yB2MpSHwRXjacyYNEWboADijm7jHgYfN44MsqUBIIXWxXk1LVVSuiJk6hBipXzO+CGvS6YSF
+        8UU1A43h8A4Y5LdUl/H/ucAh4J5ULjXR69fvTvvdKIT0pP03LgjArRruREhE1DVJlBt9kbZv61ELlfTH
+        jak78tzz/vjj/z7/9Dk1VUuFKc34eWksvfMPQ9/1F9GxpRsTwIEv9a2e8q9GS2stsbcviXVULetwU63X
+        y3Kl02k1tP2x70CfCCXlhA/7xQ8jxy5MbSbWQ+fc+cEcPuAFsz7tGhsOyWnpjLx2FDnI6nI/E2F7oibX
+        pXRfw2ChMJ4Iwzwfz9BGLZtyvTA/8pdf/PDDnTsg1VIHWLreuXPnhx9++Megl7LB994QPag0LVX4zPuv
+        3THgdnI73cFarSKJbRg3DH+TEcUnLdrWZnpYpLjW71oaB/zNZFTQBX50hvO3rJeYAoJxRZIitOE14caa
+        tMBsHcYHDBj3pQzRM5pWj4jtx7gjSe0yqbWq2r488XxpHBbxjrA/evfFeTtrypdj4zXOix/v2jc2myPf
+        UDMpuAHz8hbEjHZLBrVjDokxS2ivLfwkXYcS/UyEX9L2YURppyWZBwudB9IspcI+793vf3xxYTTHefHj
+        93+/6wqvb51kZ+qLxRK9zOFGm/ZsgcQ97JZE5PLjSr26T4e1XNlv9aR0p4o6oqi7a/3Mkyf9iWeDl0Pf
+        SCg4jje3Nvy+cCLhdd19CZfXHob6Zmvr3mFXAXEzLgKTMy2Mca1DG9NAfdLud846nXZGynRqmtHphJVr
+        elrsVRpVDT1KR8QeZArqfQvqHRWIZZsOKKGK+TjjBT0GoJiJ54ulYM5xWlDn2pVQ1cgSbTQLYUR/0oMM
+        B0Q69cdliK82KED2H3ekdKQCtbUkSnVSh8m81CljqNAX0lnJNtZwhOd5Fh4Z60EC20Y0mAc5kq7LRvVi
+        k+VB9x0OJlJyud5Oi/2WJut6DeswTerIBH5Bq1bnOBf6/4Btv52WWvCZecS5ec748KCi8gQmDuCaYJFa
+        OpPWcT0DzlrDHOzSRTeP4vnVVzBDbLkMekC316IH2CD0sHK19qj+qFIrQzmGoSZgWfwoTdtE2+T9cq2i
+        cZeca5wVQ1nglsk/jWE9eCtAf2Xed+RwTUzThGEkABvhwUTxyJyPsLVOO5KpYh6x1hcjLYRzeSDoX4B/
+        HoU+YAkNUJVzjSZLkKxHIr2e0dMT0iDPchxYo/ksdXWMMJFrNdqWfk6vH2VUIZVoaTMxBQ4VWn8zMywu
+        n0mRiNRv7dPvV76ct9B7zxAJDHSOQB8CcYaVLsAdOZ6wjU5ajEAyqNHocokW27xR+5XwPEd1vAT36r09
+        ExzW6rTbrhSp77O/rHwwIbQFO6lCZRahyd168Coi1/pQubSnOLr0S4NG1kcZSRoc8L96GL5N6lDnGHev
+        KhiX28YXW1xVoPRE5CytLbKC+RlC9Mi8C65+5vC4U1/wJOJnh9xbSAP2nzPlC9/lcQWpTLaA5BcLZ5Pp
+        twdcZVhu8ROmJUuWLFmyZMmSJUuWLFmyZMmSJUuWLFnydkDo/wB+KMARUSw2ggAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEA4eEAAAEACACs6AAAFgAAACgAAADhAAAAwgEAAAEACAAAAAAAZMgAAAAAAAAAAAAAAAEAAAAB
